# model2api

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  config.json  docker-compose.yml
.github/workflows/: docker.yml
src/: app.rs  config.rs  error.rs  main.rs  scheduler.rs  state.rs
src/api/: accounts.rs  ai.rs  image_inputs.rs  image_tasks.rs  mod.rs  register.rs  routes_common.rs  support.rs  system.rs
src/services/: account_service.rs  auth_service.rs  backup_service.rs  content_filter.rs  cpa_service.rs  editable_file_task_service.rs  image_service.rs  image_storage_service.rs  image_tags_service.rs  image_task_service.rs  log_service.rs  mod.rs  oauth_login_service.rs  proxy_service.rs  register_service.rs  sub2api_service.rs
src/services/openai_backend_api/: image.rs  mod.rs
src/services/protocol/: anthropic_v1_messages.rs  chat_completion_cache.rs  conversation.rs  mod.rs  openai_search.rs  openai_v1_chat_complete.rs  openai_v1_image_edit.rs  openai_v1_image_generations.rs  openai_v1_models.rs  openai_v1_response.rs
src/services/register/: constants.rs  flaresolverr.rs  mail_provider.rs  mod.rs  openai_register.rs
src/services/storage/: database_storage.rs  git_storage.rs  json_storage.rs  mod.rs
src/utils/: helper.rs  image_tokens.rs  log.rs  mod.rs  pkce.rs  pow.rs  sentinel.rs  turnstile.rs
web/src/app/: layout.tsx
web/src/app/accounts/: page.tsx
web/src/app/image/components/: image-composer.tsx
web/src/app/register/components/: register-card.tsx
web/src/app/settings/: page.tsx  store.ts
web/src/app/settings/components/: config-card.tsx
web/src/components/: top-nav.tsx
web/src/lib/: api.ts
web/src/store/: auth.ts
