[package]
name = "model2api"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Rust port of chatgpt2api: OpenAI-compatible image/text proxy over ChatGPT's web backend"
license = "MIT"

[[bin]]
name = "model2api"
path = "src/main.rs"

[dependencies]
# --- async runtime + web ---
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
futures = "0.3"
bytes = "1"
mime_guess = "2"

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

# --- utilities ---
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
indexmap = { version = "2", features = ["serde"] }
regex = "1"
once_cell = "1"
rand = "0.8"
imagesize = "0.13"
tiktoken-rs = "0.6"

# --- logging ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# --- crypto / encoding (used from phase 3 onward) ---
base64 = "0.22"
sha2 = "0.10"
sha3 = "0.10"
sha1 = "0.10"
hmac = "0.12"
subtle = "2"
hex = "0.4"
wreq = { version = "5.3.0", features = ["json", "cookies", "stream", "gzip", "brotli", "zstd", "deflate", "socks", "multipart"] }
wreq-util = "2.2.6"

# --- storage backends (database / git) ---
rusqlite = { version = "0.32", features = ["bundled"] }
git2 = { version = "0.19", features = ["vendored-libgit2"] }

# --- backup (tar.gz + AES-256-CBC) & async traits ---
tar = "0.4"
flate2 = "1"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
block-padding = "0.3"
async-trait = "0.1"

# --- image thumbnails + zip export ---
image = "0.25"
zip = "2"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
